--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@model/*" : ["./model/*"],
-      "@type/*" : ["./types/*"]
+      "@shared/*" : ["./shared/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/signup"],
